- Support for Android 14 - Restructured overview tab - user annotations